# codal-example-library

./: CMakeLists.txt  LICENSE  README.md  module.json
inc/: something.h
source/: something.cpp
